--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <div id="bottom-characters" class="world-characters"></div>
         <section id="section-inverted-world" class="container">
             <div class="section-texts">
-                <h1>O Mundo Invertido</h1>
+                <h2>O Mundo Invertido</h2>
                 <p role="text">
                     O mundo Invertido parece uma cópia do nosso mundo, mas com criaturas 
                     horrendas, tempestades assustadoras, muita escuridão e entidades
@@ -76,7 +76,7 @@
         <section id="section-stranger-things-gallery">
             <div class="container section-text">
                 <h2>A segunda série mais assistida da Netflix</h2>
-                <ul class="gallery-image invert-element">
+                <ul class="gallery-container" role="gallery">
                     <li class="gallery-image invert-element">
                         <img src="assets/images/content/serie-image-01.png" alt="imagem de Vecna" />
                     </li>
@@ -90,7 +90,7 @@
             </div>
         </section>
 
-        <section>
+        <section id="section-form" class="container">
             <h2>Clube Dungeons & Dragons</h2>
             <p>
                 Para deter Vecna, os heróis de Stranger Things também precisam de 
@@ -132,5 +132,27 @@
         <img src="assets/images/footer/logo.svg" alt="Logotipo DIO">
 
     </footer>
-</body>
+
+    <script type="module" src="assets/js/main.js"></script>
+    <script>
+        window.addEventListener('click', function() {
+            const audio = document.getElementById('music');
+            audio.play();
+            audio.volume = 0.2;
+        })
+
+       function switchTheme() {
+        document.body.classList.toggle('dark-theme');
+        document.body.classList.toggle('light-theme');
+
+        const theme =document.body.classList[0];
+        const music = theme === 'light-theme' ? 'normal-world.mpeg' : 'inverted-world.mpeg'
+
+        const audio = document.getElementById('music');
+        audio.src = 'assets/musics/${music}';
+        audio.play();
+        audio.volume = 0.2;
+       } 
+    </script>
+  </body>
 </html>
