--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <header aria-label="Cabeçalho da página.">
         <audio id="music" autoplay>
             <source src="assets/musics/normal-world.mpeg" />
+            <source src="assets/musics/inverted-world.mpeg" />
         </audio>
 
         <div class="header-content">
@@ -109,15 +110,16 @@
                         <input type="text" name="name" id="txtName">
 
                         <label for="email">E-mail</label>
-                        <input type="text" name="email" id="txtEmail">
+                        <input type="email" name="email" id="txtEmail">
 
                         <label for="level">Level</label>
-                        <input type="text" name="level" id="txtLevel">
+                        <input type="number" name="level" id="txtLevel">
 
                         <label for="character">Personagem</label>
-                        <textarea name="character" id="txtCharacter" cols="30" rows="10"></textarea>
+                        <textarea name="character" cols="30" rows="10" id="txtCharacter"></textarea>
 
                         <button type="button" id="btnSubscribe">Me inscrever</button>
+                        
                     </form>
                 </div>
             </div>
@@ -132,8 +134,7 @@
         <img src="assets/images/footer/logo.svg" alt="Logotipo DIO">
 
     </footer>
-
-    <script type="module" src="assets/js/main.js"></script>
+    
     <script>
         window.addEventListener('click', function() {
             const audio = document.getElementById('music');
@@ -141,18 +142,19 @@
             audio.volume = 0.2;
         })
 
-       function switchTheme() {
+        function switchTheme() {
         document.body.classList.toggle('dark-theme');
         document.body.classList.toggle('light-theme');
 
-        const theme =document.body.classList[0];
+        const theme = document.body.classList[0];
         const music = theme === 'light-theme' ? 'normal-world.mpeg' : 'inverted-world.mpeg'
 
         const audio = document.getElementById('music');
-        audio.src = 'assets/musics/${music}';
+        audio.src = `assets/musics/${music}`;
         audio.play();
         audio.volume = 0.2;
-       } 
+      }
     </script>
+    <script type="module" src="assets/js/main.js"></script>    
   </body>
 </html>
